--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>menu</module>
         <module>client</module>
         <module>user</module>
+        <module>account</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
