--- a/configserver/src/main/resources/shared/order-dev.yml
+++ b/configserver/src/main/resources/shared/order-dev.yml
@@ -1,2 +1,10 @@
 server:
   port: 8010
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/orderingsystem
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+mybatis:
+  mapper-locations: classpath:/mapping/*.xml
